--- a/HTML/header.html
+++ b/HTML/header.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/logo.png" alt="Logo" class="logo">
+        <h1>Gym
+            Lover</h1>
+        <h2>MEMBERSHIP</h2>
+        <h2>STORE</h2>
+        <img src="images/login-icon.png">
+        <img src="images/store-icon.png">
+    </header>
 </body>
+
 </html>
