header,login,register

--- a/HTML/header.html
+++ b/HTML/header.html
@@ -19,7 +19,7 @@
             Lover</h1>
         <h2>MEMBERSHIP</h2>
         <h2>STORE</h2>
-        <img src="images/login-icon.png">
+        <a href="login.html"><img src="images/login-icon.png"></a>
         <img src="images/store-icon.png">
     </header>
 </body>
