--- a/HTML/header.html
+++ b/HTML/header.html
@@ -14,13 +14,19 @@
 
 <body>
     <header>
-        <img src="images/logo.png" alt="Logo" class="logo">
-        <h1>Gym
-            Lover</h1>
-        <h2>MEMBERSHIP</h2>
-        <h2>STORE</h2>
-        <img src="images/login-icon.png">
-        <img src="images/store-icon.png">
+        <div class="header_part1">
+            <img src="images/logo.png" alt="Logo" class="logo">
+            <h1>Gym
+                Lover</h1>
+        </div>
+        <div class="header_part2">
+            <h2>MEMBERSHIP</h2>
+            <h2>STORE</h2>
+        </div>
+        <div class="header_part3">
+            <img src="images/login-icon.png">
+            <img src="images/store-icon.png">
+        </div>
     </header>
 </body>
 
