--- a/HTML/header.html
+++ b/HTML/header.html
@@ -24,7 +24,7 @@
             <h2>STORE</h2>
         </div>
         <div class="header_part3">
-            <img src="images/login-icon.png">
+            <a href="login.html"><img src="images/login-icon.png"></a>
             <img src="images/store-icon.png">
         </div>
     </header>
