--- a/HTML/header.html
+++ b/HTML/header.html
@@ -20,11 +20,15 @@
                 Lover</h1>
         </div>
         <div class="header_part2">
-            <h2>MEMBERSHIP</h2>
-            <h2>STORE</h2>
+            <div class="part2_a"></div>
+            <div class="part2_b">
+                <p>MEMBERSHIP</p>
+                <p>STORE</p>
+            </div>
+            <div class="part2_c"></div>
         </div>
         <div class="header_part3">
-            <a href="login.html"><img src="images/login-icon.png"></a>
+            <a href="login.html"><img src="images/login-icon.png" class="profile"></a>
             <img src="images/store-icon.png">
         </div>
     </header>
