--- a/HTML/register.html
+++ b/HTML/register.html
@@ -19,6 +19,8 @@
             <input type="submit" value="Register" name="submit">
         </form>
         <p class="login-link">Already have an account? <a href="login.html">Login here</a></p>
+        <button class="back">Back</button>
     </div>
+    <script src="JS/register.js"></script>
 </body>
 </html>
