--- a/HTML/login.html
+++ b/HTML/login.html
@@ -19,7 +19,9 @@
             <input type="submit" value="Login" name="submit">
         </form>
         <p class="register-link">Don't have an account? <a href="register.html">Register here</a></p>
+        <button class="back">Back</button>
     </div>
+    <script src="JS/login.js"></script>
 </body>
 
 </html>
