--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -13,27 +13,29 @@
 </head>
 
 <body>
-    <div class="menu-container">
-        <div class="menu"><a href="#"><img src="images/chest.png"></a>
-            <p class="menu-title">CHEST</p>
+    <div class="menu-page">
+        <div class="menu-container">
+            <div class="menu"><a href="#"><img src="images/chest.png"></a>
+                <p class="menu-title">CHEST</p>
+            </div>
+            <div class="menu"><a href="#"><img src="images/back.png"></a>
+                <p class="menu-title">BACK</p>
+            </div>
+            <div class="menu"><a href="#"><img src="images/biceps.png"></a>
+                <p class="menu-title">BICEPS</p>
+            </div>
         </div>
-        <div class="menu"><a href="#"><img src="images/back.png"></a>
-            <p class="menu-title">BACK</p>
-        </div>
-        <div class="menu"><a href="#"><img src="images/biceps.png"></a>
-            <p class="menu-title">BICEPS</p>
-        </div>
-    </div>
-    <br><br><br>
-    <div class="menu-container">
-        <div class="menu"><a href="#"><img src="images/shoulder.png"></a>
-            <p class="menu-title">SHOULDER</p>
-        </div>
-        <div class="menu"><a href="#"><img src="images/legs.png"></a>
-            <p class="menu-title">LEGS</p>
-        </div>
-        <div class="menu"><a href="#"><img src="images/triceps.png"></a>
-            <p class="menu-title">TRICEPS</p>
+        <br><br><br>
+        <div class="menu-container">
+            <div class="menu"><a href="#"><img src="images/shoulder.png"></a>
+                <p class="menu-title">SHOULDER</p>
+            </div>
+            <div class="menu"><a href="#"><img src="images/legs.png"></a>
+                <p class="menu-title">LEGS</p>
+            </div>
+            <div class="menu"><a href="#"><img src="images/triceps.png"></a>
+                <p class="menu-title">TRICEPS</p>
+            </div>
         </div>
     </div>
     <script src="JS/menu.js"></script>
