gallery page done

--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -32,7 +32,26 @@
         <div class="Heading_right"></div>
     </div>
     <div class="gallery_section">
-
+        <div class="photos_grid">
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+        </div>
     </div>
 </body>
 </html>
