--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
         rel="stylesheet">
 </head>
-<body>
+<body data-page="gallery">
     <div class="Heading">
         <div class="Heading_left"></div>
         <div class="Heading_Middle">
