--- a/HTML/project.html
+++ b/HTML/project.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="CSS/intro.css">
     <link rel="stylesheet" href="CSS/menu.css">
     <link rel="stylesheet" href="CSS/project.css">
+    <link rel="stylesheet" href="CSS/tips.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,7 +17,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body data-page="project">
     <header class="header">
         <div class="header_part1">
             <img src="images/logo.png" alt="Logo" class="logo">
@@ -67,10 +68,61 @@
             </div>
         </div>
     </div>
+    <div class="tips-page">
+        <img src="CSS/images/Tips.png" alt="Background image" class="bg--image">
+        <div class="tips-container">
+            <div class="tips-title">TIPS BEFORE STARTING WORKOUT :</div>
+            <br><br>
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Warm Up : </span> Start with stretches and light cardio to prevent injuries.
+                </div>
+            </div>
+
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Form First : </span> Focus on proper technique over heavy weights.
+                </div>
+            </div>
+
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Hydrate : </span> Drink water before, during, and after your workout.
+                </div>
+            </div>
+
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Mix It Up : </span> Combine cardio, strength, and flexibility exercises.
+                </div>
+            </div>
+
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Recovery : </span> Rest days are essential for muscle repair and growth.
+                </div>
+            </div>
+
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Nutrition : </span> Fuel your body with balanced meals and protein.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        
+    </div>
     <script src="JS/header.js"></script>
     <script src="JS/intro.js"></script>
     <script src="JS/menu.js"></script>
     <script src="JS/project.js"></script>
 </body>
-    
-    </html>
+
+</html>
