--- a/HTML/header.html
+++ b/HTML/header.html
@@ -13,23 +13,26 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="header_part1">
             <img src="images/logo.png" alt="Logo" class="logo">
-            <h1>Gym
+            <h1 class="header-title">Gym
                 Lover</h1>
         </div>
         <div class="header_part2">
             <div class="part2_a"></div>
             <div class="part2_b">
-                <p>MEMBERSHIP</p>
-                <p>STORE</p>
+                <a class="header-tag" href="membership.html">MEMBERSHIP</a>
+                <a class="header-tag" href="#">STORE</a>
             </div>
             <div class="part2_c"></div>
         </div>
         <div class="header_part3">
-            <a href="login.html"><img src="images/login-icon.png" class="profile"></a>
-            <img src="images/store-icon.png">
+            <img src="images/login-icon-white.png" class="profile">
+            <div class="login-box" style="display: none;">
+                <iframe id="loginFrame" src="login.html"></iframe>
+            </div>
+            <img class="store" src="images/store-icon-white.png">
         </div>
     </header>
 </body>
