--- a/HTML/login.html
+++ b/HTML/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/login.css">
 </head>
 
-<body>
+<body data-page="login">
     <div class="login-container">
         <h1>Login Page</h1>
         <form action="PHP/login.php" method="POST">
