--- a/HTML/membership.html
+++ b/HTML/membership.html
@@ -8,11 +8,36 @@
     <link rel="stylesheet" href="CSS/membership.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="CSS/header.css">
 </head>
 
-<body>
+<body data-page="membership">
+
+    <header class="header">
+        <div class="header_part1">
+            <img src="images/logo.png" alt="Logo" class="logo">
+            <h1 class="header-title">Gym
+                Lover</h1>
+        </div>
+        <div class="header_part2">
+            <div class="part2_a"></div>
+            <div class="part2_b">
+                <a class="header-tag" href="membership.html">MEMBERSHIP</a>
+                <a class="header-tag" href="#">STORE</a>
+            </div>
+            <div class="part2_c"></div>
+        </div>
+        <div class="header_part3">
+            <a href="login.html"><img src="images/login-icon-white.png" class="profile"></a>
+            <img class="store" src="images/store-icon-white.png">
+        </div>
+    </header>
+
+
+
     <div class="member-contain">
         <div class="member-ele basic">
             <div class="basic-title member-title">
@@ -50,6 +75,7 @@
         </div>
     </div>
     <script src="JS/membership.js"></script>
+    <script src="JS/header.js"></script>
 </body>
 
 </html>
