--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body about="menu">
     <div class="menu-page">
         <div class="menu-container">
             <div class="menu"><a href="#"><img src="images/chest.png"></a>
