--- a/HTML/register.html
+++ b/HTML/register.html
@@ -6,7 +6,7 @@
     <title>Register</title>
     <link rel="stylesheet" href="CSS/register.css">
 </head>
-<body>
+<body data-page="register">
     <div class="register-container">
         <h1>Register Page</h1>
         <form action="PHP/register.php" method="POST">
