--- a/HTML/tips.html
+++ b/HTML/tips.html
@@ -12,49 +12,52 @@
         rel="stylesheet">
 </head>
 
-<body>
-    <div class="tips-container">
-        <div class="tips-title">TIPS BEFORE STARTING WORKOUT :</div>
-        <br><br>
-        <div class="tip-item">
-            <div class="icon"><img src="images/dumbel-icon.png"></div>
-            <div class="tip-text">
-                <span>Warm Up : </span> Start with stretches and light cardio to prevent injuries.
+<body data-page="tips">
+    <div class="tips-page">
+        <img src="CSS/images/Tips.png" alt="Background image" class="bg-image">
+        <div class="tips-container">
+            <div class="tips-title">TIPS BEFORE STARTING WORKOUT :</div>
+            <br><br>
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Warm Up : </span> Start with stretches and light cardio to prevent injuries.
+                </div>
             </div>
-        </div>
 
-        <div class="tip-item">
-            <div class="icon"><img src="images/dumbel-icon.png"></div>
-            <div class="tip-text">
-                <span>Form First : </span> Focus on proper technique over heavy weights.
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Form First : </span> Focus on proper technique over heavy weights.
+                </div>
             </div>
-        </div>
 
-        <div class="tip-item">
-            <div class="icon"><img src="images/dumbel-icon.png"></div>
-            <div class="tip-text">
-                <span>Hydrate : </span> Drink water before, during, and after your workout.
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Hydrate : </span> Drink water before, during, and after your workout.
+                </div>
             </div>
-        </div>
 
-        <div class="tip-item">
-            <div class="icon"><img src="images/dumbel-icon.png"></div>
-            <div class="tip-text">
-                <span>Mix It Up : </span> Combine cardio, strength, and flexibility exercises.
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Mix It Up : </span> Combine cardio, strength, and flexibility exercises.
+                </div>
             </div>
-        </div>
 
-        <div class="tip-item">
-            <div class="icon"><img src="images/dumbel-icon.png"></div>
-            <div class="tip-text">
-                <span>Recovery : </span> Rest days are essential for muscle repair and growth.
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Recovery : </span> Rest days are essential for muscle repair and growth.
+                </div>
             </div>
-        </div>
 
-        <div class="tip-item">
-            <div class="icon"><img src="images/dumbel-icon.png"></div>
-            <div class="tip-text">
-                <span>Nutrition : </span> Fuel your body with balanced meals and protein.
+            <div class="tip-item">
+                <div class="icon"><img src="images/dumbel-icon.png"></div>
+                <div class="tip-text">
+                    <span>Nutrition : </span> Fuel your body with balanced meals and protein.
+                </div>
             </div>
         </div>
     </div>
