--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
         rel="stylesheet">
 </head>
+
 <body data-page="gallery">
     <div class="Heading">
         <div class="Heading_left"></div>
@@ -51,7 +53,62 @@
             <div class="photo_cell">
                 <img src="images/triceps.png" class="gallery_img">
             </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/biceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
+            <div class="photo_cell">
+                <img src="images/triceps.png" class="gallery_img">
+            </div>
         </div>
     </div>
 </body>
+
 </html>
