--- a/HTML/partners.html
+++ b/HTML/partners.html
@@ -34,13 +34,13 @@
     <div class="gallery_section">
         <div class="photos_grid">
             <div class="photo_cell">
-                <img src="images/biceps.png" class="gallery_img">
+                <img src="CSS/images/nike.jpg" class="gallery_img">
             </div>
             <div class="photo_cell">
-                <img src="images/biceps.png" class="gallery_img">
+                <img src="CSS/images/gymshark.jpg" class="gallery_img">
             </div>
             <div class="photo_cell">
-                <img src="images/biceps.png" class="gallery_img">
+                <img src="CSS/images/blackstone.webp" class="gallery_img">
             </div>
         </div>
     </div>
