--- a/HTML/project.html
+++ b/HTML/project.html
@@ -45,7 +45,7 @@
     </div>
     <div class="menu-page">
         <div class="menu-container">
-            <div class="menu"><a href="#"><img src="images/chest.png"></a>
+            <div class="menu"><a href="chest.html"><img src="images/chest.png"></a>
                 <p class="menu-title">CHEST</p>
             </div>
             <div class="menu"><a href="#"><img src="images/back.png"></a>
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="tips-page">
-        <img src="CSS/images/Tips.png" alt="Background image" class="bg--image">
+        <img src="images/Tips.png" alt="Background image" class="bg--image">
         <div class="tips-container">
             <div class="tips-title">TIPS BEFORE STARTING WORKOUT :</div>
             <br><br>
