--- a/HTML/chest.html
+++ b/HTML/chest.html
@@ -7,6 +7,7 @@
     <title>Chest</title>
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/main-menu.css">
+    <link rel="stylesheet" href="CSS/chest.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -48,25 +49,65 @@
     </div>
 
     <div class="chest-exercises">
-        <div class="chest-exercise">
+        <div class="chest-exercise bench-press">
             <div><img src="images/bench-press-v1.jpg"></div>
-            <div>
-                <div>Bench Press</div>
-                <div>
+            <div class="exercise-details">
+                <div class="detail-1">Bench Press</div>
+                <div class="detail-2">
                     Target:midchest<br>Reps:8-12/set
                 </div>
             </div>
         </div>
-        <div class="chest-exercise">Incline Bench Press</div>
-        <div class="chest-exercise">Decline Bench Press</div>
-        <div class="chest-exercise">Chest Fly</div>
-        <div class="chest-exercise">Push Up</div>
-        <div class="chest-exercise">Cable Crossover</div>
-        <div class="chest-exercise">Dumbbell Pullover</div>
+        <div class="chest-exercise">
+            <div><img src="images/bench-press-v1.jpg"></div>
+            <div class="exercise-details">
+                <div class="detail-1">Bench Press</div>
+                <div class="detail-2">
+                    Target:midchest<br>Reps:10-12/set
+                </div>
+            </div>
+        </div>
+        <div class="chest-exercise cable-pec-fly">
+            <div><img src="images/cable-pec-fly.webp"></div>
+            <div class="exercise-details">
+                <div class="detail-1">Cable-Pec-Fly</div>
+                <div class="detail-2">
+                    Target:midchest<br>Reps:8-12/set
+                </div>
+            </div>
+        </div>
+        <div class="chest-exercise">
+            <div><img src="images/bench-press-v1.jpg"></div>
+            <div class="exercise-details">
+                <div class="detail-1">Bench Press</div>
+                <div class="detail-2">
+                    Target:midchest<br>Reps:8-12/set
+                </div>
+            </div>
+        </div>
+        <div class="chest-exercise">
+            <div><img src="images/bench-press-v1.jpg"></div>
+            <div class="exercise-details">
+                <div class="detail-1">Bench Press</div>
+                <div class="detail-2">
+                    Target:midchest<br>Reps:8-12/set
+                </div>
+            </div>
+        </div>
+        <div class="chest-exercise">
+            <div><img src="images/bench-press-v1.jpg"></div>
+            <div class="exercise-details">
+                <div class="detail-1">Bench Press</div>
+                <div class="detail-2">
+                    Target:midchest<br>Reps:8-12/set
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="JS/header.js"></script>
     <script src="JS/main-menu.js"></script>
+    <script src="JS/chest.js"></script>
 </body>
 
 </html>
