--- a/HTML/tips.html
+++ b/HTML/tips.html
@@ -14,7 +14,7 @@
 
 <body data-page="tips">
     <div class="tips-page">
-        <img src="CSS/images/Tips.png" alt="Background image" class="bg-image">
+        <img src="images/Tips.png" alt="Background image" class="bg-image">
         <div class="tips-container">
             <div class="tips-title">TIPS BEFORE STARTING WORKOUT :</div>
             <br><br>
