--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -31,19 +31,19 @@
                 <div class="footer-col">
                     <h4>Social-Media-Handles:</h4>
                     <div class="social-media">
-                        <i class="fab fa-youtube"></i> 
-                        <i class="fab fa-instagram"></i> 
-                        <i class="fab fa-twitter"></i> 
-                        <i class="fab fa-facebook"></i> 
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://x.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
                 <div class="footer-col">
                     <h4>Quick-links:</h4>
                     <ul class="icon-list-1">
-                        <li><a>Gallery</a></li>
-                        <li><a>Our partners</a></li>
-                        <li><a>About Us</a></li>
-                        <li><a>Guidelines</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="partners.html">Our partners</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="#">Guidelines</a></li>
                     </ul>
                 </div>
             </div>
