--- a/HTML/cable-pec-fly.html
+++ b/HTML/cable-pec-fly.html
@@ -1,11 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cable-Pec-Fly</title>
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/main-menu.css">
+    <link rel="stylesheet" href="CSS/cable-pec-fly.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
-<body>
-    <img style="width: 20vw;" src="images/cable-pec-fly.webp" alt="Cable Pec Fly">
+
+<body data-page="cable-pec-fly">
+
+    <header class="header">
+        <div class="header_part1">
+            <img src="images/logo.png" alt="Logo" class="logo">
+            <h1 class="header-title">Gym
+                Lover</h1>
+        </div>
+        <div class="header_part2">
+            <div class="part2_a"></div>
+            <div class="part2_b">
+                <a class="header-tag" href="membership.html">MEMBERSHIP</a>
+                <a class="header-tag" href="store.html">STORE</a>
+            </div>
+            <div class="part2_c"></div>
+        </div>
+        <div class="header_part3">
+            <a href="login.html"><img src="images/login-icon-white.png" class="profile"></a>
+            <a href="store.html"><img class="store" src="images/store-icon-white.png"></a>
+        </div>
+    </header>
+
+
+    <div class="main-menu">
+        <div></div>
+        <div class="chest main-list"><a class="chest" href="chest.html">Chest</a></div>
+        <div class="back main-list"><a class="back" href="#">Back</a></div>
+        <div class="biceps main-list"><a class="biceps" href="#">Biceps</a></div>
+        <div class="shoulders main-list"><a class="shoulders" href="#">Shoulder</a></div>
+        <div class="legs main-list"><a class="legs" href="#">Legs</a></div>
+        <div class="triceps main-list"><a class="triceps" href="#">Triceps</a></div>
+        <div></div>
+    </div>
+
+    <div class="container">
+
+        <div class="left-section">
+
+            <h1 class="title">Cable-Pec-Fly</h1>
+            <div class="image-container">
+                <img src="images/cable-pec-fly.webp" alt="Bench Press">
+                <div class="overlay">
+                    <div class="done-container">
+                        <label for="done">Done</label>
+                        <input type="checkbox" id="done">
+                    </div>
+                </div>
+            </div>
+
+            <div class="bottom-box">
+                <div class="detail">
+                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Type:</u> Compound Exercise</p>
+                </div>
+                <div class="detail">
+                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Movement:</u> Horizontal Push</p>
+                </div>
+                <div class="detail">
+                    <p><span class="bullet"><img src="images/bullet.png"></span><u>Equipment:</u> Barbell, Flat Bench
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="right-section">
+            <div class="panel">
+                <h3>Target Muscle Group</h3>
+                <p><strong>Primary:</strong> Pectoralis Major (Mid Chest)</p>
+                <p><strong>Secondary:</strong> Triceps, Anterior Deltoids (Front Shoulders)</p>
+            </div>
+
+            <div class="panel">
+                <h3>Recommended Reps &amp; Sets</h3>
+                <ul>
+                    <li>For Muscle Growth: 3-4 sets of 8-12 reps</li>
+                    <li>For Strength: 4-6 sets of 3-6 reps</li>
+                    <li>For Endurance: 2-3 sets of 12-20 reps</li>
+                </ul>
+            </div>
+
+            <div class="panel">
+                <h3>Key Benefits</h3>
+                <ul>
+                    <li>Builds upper body strength</li>
+                    <li>Enhances chest muscle size and definition</li>
+                    <li>Engages multiple muscle groups for efficient training</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
+    <footer class="footer">
+        <div class="foot-container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Contact Us:</h4>
+                    <ul class="icon-list">
+                        <li><span class="material-icons">email</span>gymlover@gmail.com</li>
+                        <li><span class="material-icons">phone</span>140 254 1234</li>
+                        <li><span class="material-icons">place</span>Andhra pradesh</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Social-Media-Handles:</h4>
+                    <div class="social-media">
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://x.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <h4>Quick-links:</h4>
+                    <ul class="icon-list-1">
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="partners.html">Our partners</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="#">Guidelines</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="JS/header.js"></script>
+    <script src="JS/main-menu.js"></script>
 </body>
+
 </html>
