--- a/HTML/membership.html
+++ b/HTML/membership.html
@@ -12,6 +12,10 @@
         href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/footer.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 
 <body data-page="membership">
@@ -32,7 +36,7 @@
         </div>
         <div class="header_part3">
             <a href="login.html"><img src="images/login-icon-white.png" class="profile"></a>
-            <img class="store" src="images/store-icon-white.png">
+            <a href="store.html"><img class="store" src="images/store-icon-white.png"></a>
         </div>
     </header>
 
@@ -74,6 +78,42 @@
             </div>
         </div>
     </div>
+
+
+    <footer class="footer">
+        <div class="foot-container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Contact Us:</h4>
+                    <ul class="icon-list">
+                        <li><span class="material-icons">email</span>gymlover@gmail.com</li>
+                        <li><span class="material-icons">phone</span>140 254 1234</li>
+                        <li><span class="material-icons">place</span>Andhra pradesh</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Social-Media-Handles:</h4>
+                    <div class="social-media">
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://x.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <h4>Quick-links:</h4>
+                    <ul class="icon-list-1">
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="partners.html">Our partners</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="#">Guidelines</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
     <script src="JS/membership.js"></script>
     <script src="JS/header.js"></script>
 </body>
