--- a/HTML/header.html
+++ b/HTML/header.html
@@ -23,18 +23,17 @@
             <div class="part2_a"></div>
             <div class="part2_b">
                 <a class="header-tag" href="membership.html">MEMBERSHIP</a>
-                <a class="header-tag" href="#">STORE</a>
+                <a class="header-tag" href="store.html">STORE</a>
             </div>
             <div class="part2_c"></div>
         </div>
         <div class="header_part3">
-            <img src="images/login-icon-white.png" class="profile">
-            <div class="login-box" style="display: none;">
-                <iframe id="loginFrame" src="login.html"></iframe>
-            </div>
-            <img class="store" src="images/store-icon-white.png">
+            <a href="login.html"><img src="images/login-icon-white.png" class="profile"></a>
+            <a href="store.html"><img class="store" src="images/store-icon-white.png"></a>
         </div>
     </header>
+
+    <script src="JS/header.js"></script>
 </body>
 
 </html>
