--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -18,7 +18,7 @@
 
 <body>
     <footer class="footer">
-        <div class="container">
+        <div class="foot-container">
             <div class="row">
                 <div class="footer-col">
                     <h4>Contact Us:</h4>
