--- a/HTML/Aboutus.html
+++ b/HTML/Aboutus.html
@@ -11,15 +11,39 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&family=Joti+One&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/footer.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
+    <header class="header">
+        <div class="header_part1">
+            <img src="images/logo.png" alt="Logo" class="logo">
+            <h1 class="header-title">Gym
+                Lover</h1>
+        </div>
+        <div class="header_part2">
+            <div class="part2_a"></div>
+            <div class="part2_b">
+                <a class="header-tag" href="membership.html">MEMBERSHIP</a>
+                <a class="header-tag" href="store.html">STORE</a>
+            </div>
+            <div class="part2_c"></div>
+        </div>
+        <div class="header_part3">
+            <a href="login.html"><img src="images/login-icon-white.png" class="profile"></a>
+            <a href="store.html"><img class="store" src="images/store-icon-white.png"></a>
+        </div>
+    </header>
     <div class="Heading">
         <div class="Heading_left"></div>
         <div class="Heading_Middle">
             <div class="Company">
-                <div class="logo">
-                    <img src="images/logo.png" class="logo_img">
+                <div class="logo_abt">
+                    <img src="images/logo.png" class="logo_img_abt">
                 </div>
                 <div class="company_name">
                     <p class="name">
@@ -35,60 +59,94 @@
     </div>
     <div class="info">
         <div class="bgcolor">
-        <div class="content">
-            <div class="content1">
-                <p>Welcome to Gym Lover - Your Ultimate Fitness Companion!</p>
-            </div>
-            <br>
-            <div class="content1">
-                <p>
-                    At Gym Lover, we are passionate about empowering gym enthusiasts to achieve
-                    their fitness goals with ease and confidence. Founded in February 2025, Gym Lover
-                    quickly became the trusted go-to platform for gym-goers around the globe. Our mission?
-                    To deliver accurate, comprehensive, and practical fitness information while ensuring
-                    every customer walks away satisfied—and we've done just that, with a record of never making a single
-                    customer unhappy!
-                    Our online services provide:
-                </p>
-            </div>
-            <div class="point">
-                <div class="bullet">
-                    <img src="images/bullet.png" class="bullet_img">
+            <div class="content">
+                <div class="content1">
+                    <p>Welcome to Gym Lover - Your Ultimate Fitness Companion!</p>
                 </div>
-                <div class="content2">
-                    Detailed step-by-step guides for exercises, tailored to your goals.
+                <br>
+                <div class="content1">
+                    <p>
+                        At Gym Lover, we are passionate about empowering gym enthusiasts to achieve
+                        their fitness goals with ease and confidence. Founded in February 2025, Gym Lover
+                        quickly became the trusted go-to platform for gym-goers around the globe. Our mission?
+                        To deliver accurate, comprehensive, and practical fitness information while ensuring
+                        every customer walks away satisfied—and we've done just that, with a record of never making a
+                        single
+                        customer unhappy!
+                        Our online services provide:
+                    </p>
                 </div>
-            </div>
-            <br>
-            <div class="point" >
-                <div class="bullet">
-                    <img src="images/bullet.png" class="bullet_img">
+                <div class="point">
+                    <div class="bullet">
+                        <img src="images/bullet.png" class="bullet_img">
+                    </div>
+                    <div class="content2">
+                        Detailed step-by-step guides for exercises, tailored to your goals.
+                    </div>
                 </div>
-                <div class="content2">
-                    Expert advice on how to stay fit, maintain a healthy lifestyle,
-                    and avoid common workout mistakes.
+                <br>
+                <div class="point">
+                    <div class="bullet">
+                        <img src="images/bullet.png" class="bullet_img">
+                    </div>
+                    <div class="content2">
+                        Expert advice on how to stay fit, maintain a healthy lifestyle,
+                        and avoid common workout mistakes.
+                    </div>
                 </div>
-            </div>
-            <br>
-            <div class="point">
-                <div class="bullet">
-                    <img src="images/bullet.png" class="bullet_img">
+                <br>
+                <div class="point">
+                    <div class="bullet">
+                        <img src="images/bullet.png" class="bullet_img">
+                    </div>
+                    <div class="content2">
+                        Personalized tips for beginners and advanced athletes alike.
+                    </div>
                 </div>
-                <div class="content2">
-                    Personalized tips for beginners and advanced athletes alike.
+                <br>
+                <div class="content1">
+                    Whether you're training at home, in the gym, or outdoors,
+                    Gym Lover has all the resources you need to build strength,
+                    boost your endurance, and transform your fitness journey.
+                    Because at Gym Lover, we believe fitness should be
+                    accessible, reliable, and rewarding for everyone.
                 </div>
-            </div>
-            <br>
-            <div class="content1">
-                Whether you're training at home, in the gym, or outdoors,
-                Gym Lover has all the resources you need to build strength,
-                boost your endurance, and transform your fitness journey.
-                Because at Gym Lover, we believe fitness should be
-                accessible, reliable, and rewarding for everyone.
             </div>
         </div>
     </div>
-    </div>
+    <footer class="footer">
+        <div class="foot-container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Contact Us:</h4>
+                    <ul class="icon-list">
+                        <li><span class="material-icons">email</span>gymlover@gmail.com</li>
+                        <li><span class="material-icons">phone</span>140 254 1234</li>
+                        <li><span class="material-icons">place</span>Andhra pradesh</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Social-Media-Handles:</h4>
+                    <div class="social-media">
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://x.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <h4>Quick-links:</h4>
+                    <ul class="icon-list-1">
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="partners.html">Our partners</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="#">Guidelines</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="JS/header.js"></script>
 </body>
 
 </html>
