--- a/HTML/store.html
+++ b/HTML/store.html
@@ -12,50 +12,171 @@
     <div class="container">
         <img src="images/container_store.png" class="container_img">
     </div>
-    <div class="side-bar"></div>
+    <div class="side-bar" style="padding-top: 20px;">
+        <button class="sidebar-btn" onclick="changeColor(this)">Option 1</button>
+        <button class="sidebar-btn" onclick="changeColor(this)">Option 2</button>
+        <button class="sidebar-btn" onclick="changeColor(this)">Option 3</button>
+        <button class="sidebar-btn" onclick="changeColor(this)">Option 4</button>
+        <button class="sidebar-btn" onclick="changeColor(this)">Option 5</button>
+        <button class="sidebar-btn" onclick="changeColor(this)">Option 6</button>
+        <button class="sidebar-btn" onclick="changeColor(this)">Option 7</button>
+        <button class="sidebar-btn" onclick="changeColor(this)">Option 8</button>
+    </div>
+    <script src="JS/store.js"></script>
     <div class="items-grid">
         <div class="item-cell">
-            <div class="image_div">
-                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" alt="item1" class="item-image">
+            <div class="item">
+                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" class="item_img">
             </div>
-            <div class="description">
-                <div>
-                    <h1 class="item-title">Item 1</h1>
-                </div>
-                <div class="price-div">
-                    <p class="price">$7.99</p>
-                    <p class="Actual-price">$12.70</p>
-                    <p class="Discount">60%off</p>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
                 </div>
             </div>
         </div>
         <div class="item-cell">
-            <div class="image_div">
-                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" alt="item1" class="item-image">
+            <div class="item">
+                <img src="images/6V9A8805_425be3ac-eebc-4adf-80f7-0ad20411bd98.webp" class="item_img">
             </div>
-            <div class="description">
-                <div>
-                    <h1 class="item-title">Item 1</h1>
-                </div>
-                <div class="price-div">
-                    <p class="price">$7.99</p>
-                    <p class="Actual-price">$12.70</p>
-                    <p class="Discount">60%off</p>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
                 </div>
             </div>
         </div>
         <div class="item-cell">
-            <div class="image_div">
-                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" alt="item1" class="item-image">
+            <div class="item">
+                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" class="item_img">
             </div>
-            <div class="description">
-                <div>
-                    <h1 class="item-title">Item 1</h1>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
                 </div>
-                <div class="price-div">
-                    <p class="price">$7.99</p>
-                    <p class="Actual-price">$12.70</p>
-                    <p class="Discount">60%off</p>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/6V9A8805_425be3ac-eebc-4adf-80f7-0ad20411bd98.webp" class="item_img">      
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" class="item_img">
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/6V9A8805_425be3ac-eebc-4adf-80f7-0ad20411bd98.webp" class="item_img">      
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" class="item_img">
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/6V9A8805_425be3ac-eebc-4adf-80f7-0ad20411bd98.webp" class="item_img">      
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" class="item_img">
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/6V9A8805_425be3ac-eebc-4adf-80f7-0ad20411bd98.webp" class="item_img">      
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" class="item_img">
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/6V9A8805_425be3ac-eebc-4adf-80f7-0ad20411bd98.webp" class="item_img">      
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
+                </div>
+            </div>
+        </div>
+        <div class="item-cell">
+            <div class="item">
+                <img src="images/71O4LIW9k1L._AC_UY1100_.jpg" class="item_img">
+            </div>
+            <div class="item_info">
+                <div class="item_name">Item 1</div>
+                <div class="price_and_discount">
+                    <div class="price">$10.00</div>
+                    <div class="discount">10% off</div>
                 </div>
             </div>
         </div>
