--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -50,16 +50,16 @@
         <hr class="line">
         <div class="side-bar-links">
             <div class="orders">
-                <a href="#" class="order-tag">Orders</a>
+                <a href="store.html" class="order-tag">Orders</a>
                 <span class="material-icons">shopping_cart</span>
             </div>
             <div class="Log-out">
-                <a href="#" class="logout-tag">Log-out</a>
+                <a href="project.php" class="logout-tag">Log-out</a>
                 <span class="material-icons">logout</span>
             </div>
         </div>
     </div>
-    <div class="profile">
+    <div class="profile-container">
         <div class="profile-photo-div">
             <img src="images/profile.png" class="profile-photo">
         </div>
