--- a/HTML/chest.html
+++ b/HTML/chest.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="chest-exercises">
-        <div class="chest-exercise bench-press">
+        <div class="chest-exercise" id="bench-press">
             <div><img src="images/bench-press-v1.jpg"></div>
             <div class="exercise-details">
                 <div class="detail-1">Bench Press</div>
