--- a/HTML/login.html
+++ b/HTML/login.html
@@ -13,9 +13,9 @@
         <h1>Login Page</h1>
         <form action="PHP/login.php" method="POST">
             <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username"><br><br>
+            <input type="text" id="username" name="username" required><br><br>
             <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password"><br><br>
+            <input type="password" id="password" name="password" required><br><br>
             <input type="submit" value="Login" name="submit">
         </form>
         <p class="register-link">Don't have an account? <a href="register.html">Register here</a></p>
