--- a/HTML/register.html
+++ b/HTML/register.html
@@ -11,11 +11,11 @@
         <h1>Register Page</h1>
         <form action="PHP/register.php" method="POST">
             <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username"><br><br>
+            <input type="text" id="username" name="username" required><br><br>
             <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password"><br><br>
+            <input type="password" id="password" name="password" required><br><br>
             <label for="confirm-password">Confirm Password:</label><br>
-            <input type="password" id="confirm-password" name="confirm-password"><br><br>
+            <input type="password" id="confirm-password" name="confirm-password" required><br><br>
             <input type="submit" value="Register" name="submit">
         </form>
         <p class="login-link">Already have an account? <a href="login.html">Login here</a></p>
