--- a/HTML/header.html
+++ b/HTML/header.html
@@ -28,7 +28,9 @@
             <div class="part2_c"></div>
         </div>
         <div class="header_part3">
-            <a href="login.html"><img src="images/login-icon-white.png" class="profile"></a>
+            <a href="login.html">
+                <img src="images/login-icon-white.png" class="profile">
+            </a>
             <a href="store.html"><img class="store" src="images/store-icon-white.png"></a>
         </div>
     </header>
