--- a/HTML/partners.html
+++ b/HTML/partners.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header_part1">
+        <div class="header_part1 nav-link" data-href="project.php">
             <img src="images/logo.png" alt="Logo" class="logo">
             <h1 class="header-title">Gym
                 Lover</h1>
@@ -27,14 +27,14 @@
         <div class="header_part2">
             <div class="part2_a"></div>
             <div class="part2_b">
-                <a class="header-tag" href="membership.html">MEMBERSHIP</a>
-                <a class="header-tag" href="store.html">STORE</a>
+                <div class="nav-link require-login" data-href="membership.html"><p class="header-tag">MEMBERSHIP</p></div>
+                <div class="nav-link" data-href="store.html"><p class="header-tag">STORE</p></div>
             </div>
             <div class="part2_c"></div>
         </div>
         <div class="header_part3">
-            <a href="login.html"><img src="images/login-icon-white.png" class="profile"></a>
-            <a href="store.html"><img class="store" src="images/store-icon-white.png"></a>
+            <img src="images/login-icon-white.png" class="profile" id="profile-link" onclick="handleProfileClick()" alt="Profile Icon">
+            <img class="store nav-link" src="images/store-icon-white.png" data-href="store.html" alt="store">
         </div>
     </header>
     <div class="Heading">
