--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -22,7 +22,7 @@
 
 
     <header class="header">
-        <div class="header_part1">
+        <div class="header_part1 nav-link" data-href="project.php">
             <img src="images/logo.png" alt="Logo" class="logo">
             <h1 class="header-title">Gym
                 Lover</h1>
@@ -30,14 +30,14 @@
         <div class="header_part2">
             <div class="part2_a"></div>
             <div class="part2_b">
-                <a class="header-tag" href="membership.html">MEMBERSHIP</a>
-                <a class="header-tag" href="store.html">STORE</a>
+                <div class="nav-link require-login" data-href="membership.html"><p class="header-tag">MEMBERSHIP</p></div>
+                <div class="nav-link" data-href="store.html"><p class="header-tag">STORE</p></div>
             </div>
             <div class="part2_c"></div>
         </div>
         <div class="header_part3">
-            <img src="images/login-icon-white.png" class="profile">
-            <a href="store.html"><img class="store" src="images/store-icon-white.png"></a>
+            <img src="images/login-icon-white.png" class="profile" id="profile-link" onclick="handleProfileClick()" alt="Profile Icon">
+            <img class="store nav-link" src="images/store-icon-white.png" data-href="store.html" alt="store">
         </div>
     </header>
 
@@ -54,7 +54,7 @@
                 <span class="material-icons">shopping_cart</span>
             </div>
             <div class="Log-out">
-                <a href="project.php" class="logout-tag">Log-out</a>
+                <a href="project.php" class="logout-tag" onclick="logout()">Log-out</a>
                 <span class="material-icons">logout</span>
             </div>
         </div>
