--- a/HTML/chest.html
+++ b/HTML/chest.html
@@ -31,13 +31,13 @@
             <div class="part2_a"></div>
             <div class="part2_b">
                 <div class="nav-link require-login" data-href="membership.html"><p class="header-tag">MEMBERSHIP</p></div>
-                <div class="nav-link" data-href="store.html"><p class="header-tag">STORE</p></div>
+                <div class="nav-link" data-href="store.php"><p class="header-tag">STORE</p></div>
             </div>
             <div class="part2_c"></div>
         </div>
         <div class="header_part3">
             <img src="images/login-icon-white.png" class="profile" id="profile-link" onclick="handleProfileClick()" alt="Profile Icon">
-            <img class="store nav-link" src="images/store-icon-white.png" data-href="store.html" alt="store">
+            <img class="store nav-link" src="images/store-icon-white.png" data-href="store.php" alt="store">
         </div>
     </header>
 
