--- a/HTML/bench-press.html
+++ b/HTML/bench-press.html
@@ -134,7 +134,7 @@
                 <div class="footer-col">
                     <h4>Quick-links:</h4>
                     <ul class="icon-list-1">
-                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="gallery.php">Gallery</a></li>
                         <li><a href="partners.html">Our partners</a></li>
                         <li><a href="aboutus.html">About Us</a></li>
                         <li><a href="#">Guidelines</a></li>
